fixed overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,7 @@ body {
   font-weight: 100;
   background: #EEF1F3;
   line-height: 1;
+  overflow: auto;
 }
 
 
